update logger
