# api/http/app/api.pb.go
@@ -26,8 +26,8 @@ type HelloRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	// @inject_tag: form:"name" binding:"required"
-	Name string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty" form:"name" binding:"required"`
+	// @inject_tag: bind:"query,name=name" validate:"required" default:"goer"
+	Name string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty" bind:"query,name=name" validate:"required" default:"goer"`
 }
 
 func (x *HelloRequest) Reset() {
@@ -121,8 +121,10 @@ type LoginRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Username string `protobuf:"bytes,1,opt,name=username,proto3" json:"username,omitempty"`
-	Password string `protobuf:"bytes,2,opt,name=password,proto3" json:"password,omitempty"`
+	// @inject_tag: bind:"form,name=username" validate:"required,non_blank,min_len=2,pattern=#abc123"
+	Username string `protobuf:"bytes,1,opt,name=username,proto3" json:"username,omitempty" bind:"form,name=username" validate:"required,non_blank,min_len=2,pattern=#abc123"`
+	// @inject_tag: bind:"form,name=password" validate:"required,non_blank,min_len=6"
+	Password string `protobuf:"bytes,2,opt,name=password,proto3" json:"password,omitempty" bind:"form,name=password" validate:"required,non_blank,min_len=6"`
 }
 
 func (x *LoginRequest) Reset() {
@@ -214,8 +216,10 @@ type UploadImageRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Filename string `protobuf:"bytes,1,opt,name=filename,proto3" json:"filename,omitempty"` // the filename of the image
-	File     []byte `protobuf:"bytes,2,opt,name=file,proto3" json:"file,omitempty"`         // the image file
+	// @inject_tag: bind:"file,name=file" validate:"required,min_len=1"
+	File []byte `protobuf:"bytes,1,opt,name=file,proto3" json:"file,omitempty" bind:"file,name=file" validate:"required,min_len=1"`
+	// @inject_tag: bind:"form,name=key"
+	Key string `protobuf:"bytes,2,opt,name=key,proto3" json:"key,omitempty" bind:"form,name=key"`
 }
 
 func (x *UploadImageRequest) Reset() {
@@ -250,18 +254,18 @@ func (*UploadImageRequest) Descriptor() ([]byte, []int) {
 	return file_http_app_api_proto_rawDescGZIP(), []int{4}
 }
 
-func (x *UploadImageRequest) GetFilename() string {
-	if x != nil {
-		return x.Filename
-	}
-	return ""
-}
-
 func (x *UploadImageRequest) GetFile() []byte {
 	if x != nil {
 		return x.File
 	}
 	return nil
+}
+
+func (x *UploadImageRequest) GetKey() string {
+	if x != nil {
+		return x.Key
+	}
+	return ""
 }
 
 type UploadImageResponse struct {
@@ -316,8 +320,8 @@ type GetImageRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	// @inject_tag: form:"name" uri:"key" binding:"required"
-	Key string `protobuf:"bytes,1,opt,name=key,proto3" json:"key,omitempty" form:"name" uri:"key" binding:"required"`
+	// @inject_tag: bind:"uri,name=key" validate="required,min_len=1,max_len=64"
+	Key string `protobuf:"bytes,1,opt,name=key,proto3" json:"key,omitempty" bind:"uri,name=key"`
 }
 
 func (x *GetImageRequest) Reset() {
@@ -423,43 +427,42 @@ var file_http_app_api_proto_rawDesc = []byte{
 	0x73, 0x65, 0x72, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x70, 0x61, 0x73, 0x73, 0x77,
 	0x6f, 0x72, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x70, 0x61, 0x73, 0x73, 0x77,
 	0x6f, 0x72, 0x64, 0x22, 0x0f, 0x0a, 0x0d, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x52, 0x65, 0x73, 0x70,
-	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x44, 0x0a, 0x12, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x49, 0x6d,
-	0x61, 0x67, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x1a, 0x0a, 0x08, 0x66, 0x69,
-	0x6c, 0x65, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x66, 0x69,
-	0x6c, 0x65, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x66, 0x69, 0x6c, 0x65, 0x18, 0x02,
-	0x20, 0x01, 0x28, 0x0c, 0x52, 0x04, 0x66, 0x69, 0x6c, 0x65, 0x22, 0x27, 0x0a, 0x13, 0x55, 0x70,
-	0x6c, 0x6f, 0x61, 0x64, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
-	0x65, 0x12, 0x10, 0x0a, 0x03, 0x6b, 0x65, 0x79, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03,
-	0x6b, 0x65, 0x79, 0x22, 0x23, 0x0a, 0x0f, 0x47, 0x65, 0x74, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x10, 0x0a, 0x03, 0x6b, 0x65, 0x79, 0x18, 0x01, 0x20,
-	0x01, 0x28, 0x09, 0x52, 0x03, 0x6b, 0x65, 0x79, 0x22, 0x26, 0x0a, 0x10, 0x47, 0x65, 0x74, 0x49,
-	0x6d, 0x61, 0x67, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x12, 0x0a, 0x04,
-	0x66, 0x69, 0x6c, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0c, 0x52, 0x04, 0x66, 0x69, 0x6c, 0x65,
-	0x32, 0xde, 0x02, 0x0a, 0x09, 0x41, 0x70, 0x69, 0x53, 0x65, 0x72, 0x76, 0x65, 0x72, 0x12, 0x48,
-	0x0a, 0x05, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x12, 0x16, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61,
-	0x70, 0x70, 0x2e, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
-	0x17, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x48, 0x65, 0x6c, 0x6c, 0x6f,
+	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x3a, 0x0a, 0x12, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x49, 0x6d,
+	0x61, 0x67, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x12, 0x0a, 0x04, 0x66, 0x69,
+	0x6c, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0c, 0x52, 0x04, 0x66, 0x69, 0x6c, 0x65, 0x12, 0x10,
+	0x0a, 0x03, 0x6b, 0x65, 0x79, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x6b, 0x65, 0x79,
+	0x22, 0x27, 0x0a, 0x13, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52,
+	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x10, 0x0a, 0x03, 0x6b, 0x65, 0x79, 0x18, 0x01,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x6b, 0x65, 0x79, 0x22, 0x23, 0x0a, 0x0f, 0x47, 0x65, 0x74,
+	0x49, 0x6d, 0x61, 0x67, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x10, 0x0a, 0x03,
+	0x6b, 0x65, 0x79, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x6b, 0x65, 0x79, 0x22, 0x26,
+	0x0a, 0x10, 0x47, 0x65, 0x74, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
+	0x73, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x66, 0x69, 0x6c, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0c,
+	0x52, 0x04, 0x66, 0x69, 0x6c, 0x65, 0x32, 0xdb, 0x02, 0x0a, 0x09, 0x41, 0x70, 0x69, 0x53, 0x65,
+	0x72, 0x76, 0x65, 0x72, 0x12, 0x48, 0x0a, 0x05, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x12, 0x16, 0x2e,
+	0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x52, 0x65,
+	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x17, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70,
+	0x2e, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x0e,
+	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x08, 0x12, 0x06, 0x2f, 0x68, 0x65, 0x6c, 0x6c, 0x6f, 0x12, 0x48,
+	0x0a, 0x05, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x12, 0x16, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61,
+	0x70, 0x70, 0x2e, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
+	0x17, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x4c, 0x6f, 0x67, 0x69, 0x6e,
 	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x0e, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x08,
-	0x12, 0x06, 0x2f, 0x68, 0x65, 0x6c, 0x6c, 0x6f, 0x12, 0x48, 0x0a, 0x05, 0x4c, 0x6f, 0x67, 0x69,
-	0x6e, 0x12, 0x16, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x4c, 0x6f, 0x67,
-	0x69, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x17, 0x2e, 0x68, 0x74, 0x74, 0x70,
-	0x2e, 0x61, 0x70, 0x70, 0x2e, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
-	0x73, 0x65, 0x22, 0x0e, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x08, 0x22, 0x06, 0x2f, 0x6c, 0x6f, 0x67,
-	0x69, 0x6e, 0x12, 0x64, 0x0a, 0x0b, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x49, 0x6d, 0x61, 0x67,
-	0x65, 0x12, 0x1c, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x55, 0x70, 0x6c,
-	0x6f, 0x61, 0x64, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
-	0x1d, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x55, 0x70, 0x6c, 0x6f, 0x61,
-	0x64, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x18,
-	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x12, 0x3a, 0x01, 0x2a, 0x22, 0x0d, 0x2f, 0x75, 0x70, 0x6c, 0x6f,
-	0x61, 0x64, 0x2f, 0x69, 0x6d, 0x61, 0x67, 0x65, 0x12, 0x57, 0x0a, 0x08, 0x47, 0x65, 0x74, 0x49,
-	0x6d, 0x61, 0x67, 0x65, 0x12, 0x19, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e,
-	0x47, 0x65, 0x74, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
-	0x1a, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x47, 0x65, 0x74, 0x49, 0x6d,
-	0x61, 0x67, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x14, 0x82, 0xd3, 0xe4,
-	0x93, 0x02, 0x0e, 0x12, 0x0c, 0x2f, 0x69, 0x6d, 0x61, 0x67, 0x65, 0x2f, 0x7b, 0x6b, 0x65, 0x79,
-	0x7d, 0x42, 0x22, 0x5a, 0x20, 0x67, 0x6f, 0x2d, 0x77, 0x65, 0x62, 0x2d, 0x74, 0x65, 0x6d, 0x70,
-	0x6c, 0x61, 0x74, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x68, 0x74, 0x74, 0x70, 0x2f, 0x61, 0x70,
-	0x70, 0x3b, 0x61, 0x70, 0x70, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x22, 0x06, 0x2f, 0x6c, 0x6f, 0x67, 0x69, 0x6e, 0x12, 0x61, 0x0a, 0x0b, 0x55, 0x70, 0x6c, 0x6f,
+	0x61, 0x64, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x12, 0x1c, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61,
+	0x70, 0x70, 0x2e, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52, 0x65,
+	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1d, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70,
+	0x2e, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52, 0x65, 0x73, 0x70,
+	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x15, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0f, 0x22, 0x0d, 0x2f, 0x75,
+	0x70, 0x6c, 0x6f, 0x61, 0x64, 0x2f, 0x69, 0x6d, 0x61, 0x67, 0x65, 0x12, 0x57, 0x0a, 0x08, 0x47,
+	0x65, 0x74, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x12, 0x19, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61,
+	0x70, 0x70, 0x2e, 0x47, 0x65, 0x74, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65,
+	0x73, 0x74, 0x1a, 0x1a, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x47, 0x65,
+	0x74, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x14,
+	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e, 0x12, 0x0c, 0x2f, 0x69, 0x6d, 0x61, 0x67, 0x65, 0x2f, 0x7b,
+	0x6b, 0x65, 0x79, 0x7d, 0x42, 0x22, 0x5a, 0x20, 0x67, 0x6f, 0x2d, 0x77, 0x65, 0x62, 0x2d, 0x74,
+	0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x68, 0x74, 0x74, 0x70,
+	0x2f, 0x61, 0x70, 0x70, 0x3b, 0x61, 0x70, 0x70, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
